salesforce/force-app/main/default/objects/FunTargetState__c/FunTargetState__c.object-meta.xml
<CustomObject>
    <label>Fun Target State</label>
    <nameField>
        <displayFormat>FTS-{000000}</displayFormat>
        <label>State Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fun Target States</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>