salesforce/force-app/main/default/objects/FunTargetState__c/fields/BetsJson__c.field-meta.xml
<CustomField>
    <fullName>BetsJson__c</fullName>
    <label>Bets Json</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>