salesforce/force-app/main/default/objects/FunTargetState__c/fields/Last10Results__c.field-meta.xml
<CustomField>
    <fullName>Last10Results__c</fullName>
    <defaultValue>&quot;8,8,9,0,2,9,6,4,3,7&quot;</defaultValue>
    <label>Last 10 Results</label>
    <length>255</length>
    <type>Text</type>
</CustomField>