salesforce/force-app/main/default/objects/FunTargetState__c/fields/LastRoundAt__c.field-meta.xml
<CustomField>
    <fullName>LastRoundAt__c</fullName>
    <label>Last Round At</label>
    <type>DateTime</type>
</CustomField>