salesforce/force-app/main/default/objects/FunTargetState__c/fields/LastUpdatedFrom__c.field-meta.xml
<CustomField>
    <fullName>LastUpdatedFrom__c</fullName>
    <label>Last Updated From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Site</fullName>
                <default>true</default>
                <label>Site</label>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>