salesforce/force-app/main/default/objects/FunTargetState__c/fields/PredefinedWheelNumber__c.field-meta.xml
<CustomField>
    <fullName>PredefinedWheelNumber__c</fullName>
    <description>Admin selected predefined wheel number (0-9).</description>
    <label>Predefined Wheel Number</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>