salesforce/force-app/main/default/objects/FunTargetState__c/fields/TotalBetAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalBetAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Bet Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>