salesforce/force-app/main/default/objects/FunTargetState__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Fun Target States</relationshipLabel>
    <relationshipName>FunTargetStates</relationshipName>
    <type>Lookup</type>
</CustomField>