salesforce/force-app/main/default/objects/FunTargetState__c/fields/UserIdKey__c.field-meta.xml
<CustomField>
    <fullName>UserIdKey__c</fullName>
    <externalId>true</externalId>
    <label>User Id Key</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>